Basic Structure for the project

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My To-Do List!!</title>
+    <title>toprefecdo</title>
 </head>
 <body>
+    <header id="header">
+        <h1> perfect to do listing!</h1>
+
+    </header>
+    <nav id="side-bar">
+        <img id="logo">
+        <ul id="nav">
+            <li><button>Monthly</button></li>
+            <li><button>Weekly</button></li>
+            <li><button>Daily</button></li>
+            <li><button>About</button></li>
+        </ul>
+
+    </nav>
+    <div id="content">
+        <div id="big-card">
+
+        </div>
+    </div>
     
 </body>
 </html>
